--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "connect-session": "^0.0.1",
         "connect-session-sequelize": "^7.1.7",
         "dotenv": "^8.6.0",
         "express": "^4.18.2",
