--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "connect-session-sequelize": "^7.1.7",
         "dotenv": "^8.6.0",
         "express": "^4.18.2",
+        "express-fileupload": "^1.4.2",
         "express-handlebars": "^5.3.5",
         "express-session": "^1.17.3",
         "imgur": "^2.3.0",
         "mysql2": "^2.3.3",
-        "sequelize": "^6.33.0"
+        "sequelize": "^6.33.0",
+        "tslib": "^2.6.2"
     }
 }
