--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express-fileupload": "^1.4.2",
         "express-handlebars": "^5.3.5",
         "express-session": "^1.17.3",
+        "fs": "^0.0.1-security",
         "imgur": "^2.3.0",
         "mysql2": "^2.3.3",
         "sequelize": "^6.33.0",
